// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render multiplication table correctly 1`] = `
.c2 {
  padding: 0.5rem 0.75rem;
  border-color: #e0e0e0;
  font-weight: 500;
}

.c3 {
  padding: 0.5rem 0.75rem;
  border-color: #e0e0e0;
  border-color: #e0e0e0;
}

.c1 {
  border-bottom: 1px solid #e0e0e0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: collapse;
  border-style: hidden;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  box-shadow: 0 0 0 1px #e0e0e0;
  font-size: 0.875rem;
  width: 100%;
  text-align: left;
}

.c0 > thead {
  border-bottom: 1px solid #e0e0e0;
  background-color: #fafafa;
}

<table
  class="c0"
  width="100%"
>
  <thead>
    <tr
      class="c1"
    >
      <th
        class="c2"
      >
        2
      </th>
      <th
        class="c2"
      >
        3
      </th>
      <th
        class="c2"
      >
        4
      </th>
      <th
        class="c2"
      >
        5
      </th>
      <th
        class="c2"
      >
        6
      </th>
      <th
        class="c2"
      >
        7
      </th>
      <th
        class="c2"
      >
        8
      </th>
      <th
        class="c2"
      >
        9
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c1"
    >
      <td
        class="c3"
      >
        2
         * 
        1
         = 
        2
      </td>
      <td
        class="c3"
      >
        3
         * 
        1
         = 
        3
      </td>
      <td
        class="c3"
      >
        4
         * 
        1
         = 
        4
      </td>
      <td
        class="c3"
      >
        5
         * 
        1
         = 
        5
      </td>
      <td
        class="c3"
      >
        6
         * 
        1
         = 
        6
      </td>
      <td
        class="c3"
      >
        7
         * 
        1
         = 
        7
      </td>
      <td
        class="c3"
      >
        8
         * 
        1
         = 
        8
      </td>
      <td
        class="c3"
      >
        9
         * 
        1
         = 
        9
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c3"
      >
        2
         * 
        2
         = 
        4
      </td>
      <td
        class="c3"
      >
        3
         * 
        2
         = 
        6
      </td>
      <td
        class="c3"
      >
        4
         * 
        2
         = 
        8
      </td>
      <td
        class="c3"
      >
        5
         * 
        2
         = 
        10
      </td>
      <td
        class="c3"
      >
        6
         * 
        2
         = 
        12
      </td>
      <td
        class="c3"
      >
        7
         * 
        2
         = 
        14
      </td>
      <td
        class="c3"
      >
        8
         * 
        2
         = 
        16
      </td>
      <td
        class="c3"
      >
        9
         * 
        2
         = 
        18
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c3"
      >
        2
         * 
        3
         = 
        6
      </td>
      <td
        class="c3"
      >
        3
         * 
        3
         = 
        9
      </td>
      <td
        class="c3"
      >
        4
         * 
        3
         = 
        12
      </td>
      <td
        class="c3"
      >
        5
         * 
        3
         = 
        15
      </td>
      <td
        class="c3"
      >
        6
         * 
        3
         = 
        18
      </td>
      <td
        class="c3"
      >
        7
         * 
        3
         = 
        21
      </td>
      <td
        class="c3"
      >
        8
         * 
        3
         = 
        24
      </td>
      <td
        class="c3"
      >
        9
         * 
        3
         = 
        27
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c3"
      >
        2
         * 
        4
         = 
        8
      </td>
      <td
        class="c3"
      >
        3
         * 
        4
         = 
        12
      </td>
      <td
        class="c3"
      >
        4
         * 
        4
         = 
        16
      </td>
      <td
        class="c3"
      >
        5
         * 
        4
         = 
        20
      </td>
      <td
        class="c3"
      >
        6
         * 
        4
         = 
        24
      </td>
      <td
        class="c3"
      >
        7
         * 
        4
         = 
        28
      </td>
      <td
        class="c3"
      >
        8
         * 
        4
         = 
        32
      </td>
      <td
        class="c3"
      >
        9
         * 
        4
         = 
        36
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c3"
      >
        2
         * 
        5
         = 
        10
      </td>
      <td
        class="c3"
      >
        3
         * 
        5
         = 
        15
      </td>
      <td
        class="c3"
      >
        4
         * 
        5
         = 
        20
      </td>
      <td
        class="c3"
      >
        5
         * 
        5
         = 
        25
      </td>
      <td
        class="c3"
      >
        6
         * 
        5
         = 
        30
      </td>
      <td
        class="c3"
      >
        7
         * 
        5
         = 
        35
      </td>
      <td
        class="c3"
      >
        8
         * 
        5
         = 
        40
      </td>
      <td
        class="c3"
      >
        9
         * 
        5
         = 
        45
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c3"
      >
        2
         * 
        6
         = 
        12
      </td>
      <td
        class="c3"
      >
        3
         * 
        6
         = 
        18
      </td>
      <td
        class="c3"
      >
        4
         * 
        6
         = 
        24
      </td>
      <td
        class="c3"
      >
        5
         * 
        6
         = 
        30
      </td>
      <td
        class="c3"
      >
        6
         * 
        6
         = 
        36
      </td>
      <td
        class="c3"
      >
        7
         * 
        6
         = 
        42
      </td>
      <td
        class="c3"
      >
        8
         * 
        6
         = 
        48
      </td>
      <td
        class="c3"
      >
        9
         * 
        6
         = 
        54
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c3"
      >
        2
         * 
        7
         = 
        14
      </td>
      <td
        class="c3"
      >
        3
         * 
        7
         = 
        21
      </td>
      <td
        class="c3"
      >
        4
         * 
        7
         = 
        28
      </td>
      <td
        class="c3"
      >
        5
         * 
        7
         = 
        35
      </td>
      <td
        class="c3"
      >
        6
         * 
        7
         = 
        42
      </td>
      <td
        class="c3"
      >
        7
         * 
        7
         = 
        49
      </td>
      <td
        class="c3"
      >
        8
         * 
        7
         = 
        56
      </td>
      <td
        class="c3"
      >
        9
         * 
        7
         = 
        63
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c3"
      >
        2
         * 
        8
         = 
        16
      </td>
      <td
        class="c3"
      >
        3
         * 
        8
         = 
        24
      </td>
      <td
        class="c3"
      >
        4
         * 
        8
         = 
        32
      </td>
      <td
        class="c3"
      >
        5
         * 
        8
         = 
        40
      </td>
      <td
        class="c3"
      >
        6
         * 
        8
         = 
        48
      </td>
      <td
        class="c3"
      >
        7
         * 
        8
         = 
        56
      </td>
      <td
        class="c3"
      >
        8
         * 
        8
         = 
        64
      </td>
      <td
        class="c3"
      >
        9
         * 
        8
         = 
        72
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c3"
      >
        2
         * 
        9
         = 
        18
      </td>
      <td
        class="c3"
      >
        3
         * 
        9
         = 
        27
      </td>
      <td
        class="c3"
      >
        4
         * 
        9
         = 
        36
      </td>
      <td
        class="c3"
      >
        5
         * 
        9
         = 
        45
      </td>
      <td
        class="c3"
      >
        6
         * 
        9
         = 
        54
      </td>
      <td
        class="c3"
      >
        7
         * 
        9
         = 
        63
      </td>
      <td
        class="c3"
      >
        8
         * 
        9
         = 
        72
      </td>
      <td
        class="c3"
      >
        9
         * 
        9
         = 
        81
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table should render week schedule 1`] = `
.c2 {
  padding: 0.5rem 0.75rem;
  border-color: #e0e0e0;
  font-weight: 500;
}

.c3 {
  padding: 0.5rem 0.75rem;
  border-color: #e0e0e0;
  border-color: #e0e0e0;
}

.c4 {
  padding: 0.5rem 0.75rem;
  border-color: #e0e0e0;
  border-right: 1px solid;
  border-left: 1px solid;
  border-color: #e0e0e0;
}

.c1 {
  border-bottom: 1px solid #e0e0e0;
}

.c0 {
  overflow: hidden;
  border-spacing: 0;
  border-collapse: collapse;
  border-style: hidden;
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  box-shadow: 0 0 0 1px #e0e0e0;
  font-size: 0.875rem;
  width: 100%;
  text-align: center;
}

.c0 > thead {
  border-bottom: 1px solid #e0e0e0;
  background-color: #fafafa;
}

<table
  class="c0"
  width="100%"
>
  <thead>
    <tr
      class="c1"
    >
      <th
        class="c2"
        colspan="8"
      >
        Time
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c1"
    >
      <td
        class="c3"
      />
      <td
        class="c3"
      >
        Sun
      </td>
      <td
        class="c3"
      >
        Mon
      </td>
      <td
        class="c3"
      >
        Tue
      </td>
      <td
        class="c3"
      >
        Wed
      </td>
      <td
        class="c3"
      >
        Thu
      </td>
      <td
        class="c3"
      >
        Fri
      </td>
      <td
        class="c3"
      >
        Sat
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c3"
      >
        Morning
        <br />
        10:00-13:00
      </td>
      <td
        class="c4"
        rowspan="3"
      >
        Day off
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          1
        </div>
        <div>
          Slave 
          1
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          2
        </div>
        <div>
          Slave 
          2
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          3
        </div>
        <div>
          Slave 
          3
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          4
        </div>
        <div>
          Slave 
          4
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          5
        </div>
        <div>
          Slave 
          5
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          6
        </div>
        <div>
          Slave 
          6
        </div>
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c3"
      >
        Afternoon
        <br />
        14:00-18:00
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          1
        </div>
        <div>
          Slave 
          1
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          2
        </div>
        <div>
          Slave 
          2
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          3
        </div>
        <div>
          Slave 
          3
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          4
        </div>
        <div>
          Slave 
          4
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          5
        </div>
        <div>
          Slave 
          5
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          6
        </div>
        <div>
          Slave 
          6
        </div>
      </td>
    </tr>
    <tr
      class="c1"
    >
      <td
        class="c3"
      >
        Night
        <br />
        19:00-22:00
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          1
        </div>
        <div>
          Slave 
          1
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          2
        </div>
        <div>
          Slave 
          2
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          3
        </div>
        <div>
          Slave 
          3
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          4
        </div>
        <div>
          Slave 
          4
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          5
        </div>
        <div>
          Slave 
          5
        </div>
      </td>
      <td
        class="c3"
      >
        <div>
          Master 
          6
        </div>
        <div>
          Slave 
          6
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
